fixed box alignment

--- a/src/main/webapp/css/account.css
+++ b/src/main/webapp/css/account.css
@@ -50,8 +50,8 @@ form ul li {
     background-color:RGB(241, 233, 210);
 	padding-left:10px;
     padding-top: 20px;
-	width:27%;
-	height:160px;
+	width:35%;
+	height:275px;
 	display:inline-block;
 }
 
@@ -62,7 +62,7 @@ form ul li {
     padding-right:12px;
     padding-top: 20px;
 	width:35%;
-	height:170px;
+	height:230px;
 	display:inline-block;
 }
 
